<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <EditText
        android:id = "@+id/inputFirstName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart = "10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="10dp"
        android:hint = "@string/first_name"
        android:inputType="text"
        android:privateImeOptions="actionNext"
        tools:ignore="Autofill" />
    <EditText
        android:id = "@+id/inputLastName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart = "10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="10dp"
        android:hint = "@string/last_name"
        android:inputType="text"
        android:privateImeOptions="actionNext"
        tools:ignore="Autofill" />
    <EditText
        android:id = "@+id/inputPost"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart = "10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="10dp"
        android:hint = "@string/post"
        android:inputType="text"
        android:privateImeOptions="actionNext"
        tools:ignore="Autofill"
        />
    <EditText
        android:id = "@+id/inputAge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart = "10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="10dp"
        android:hint = "@string/age"
        android:inputType="text"
        android:privateImeOptions="actionNext"
        tools:ignore="Autofill" />
    <TextView
        android:id = "@+id/inputQuerry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart = "10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="10dp"
        android:text = "@string/querry"

        />

    <RadioGroup
        android:id = "@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart = "10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="10dp"
        android:orientation= "horizontal">

        <RadioButton
            android:id = "@+id/radioButtonYes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text = "@string/yes" />
        <RadioButton
            android:id = "@+id/radioButtonNo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text = "@string/no"
            android:layout_marginStart="12dp"
            android:layout_marginLeft="12dp" />


    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation= "horizontal">
    <Button
        android:id="@+id/buttonSave"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/save"
        tools:ignore="ButtonStyle"
        />
    <Button
        android:id="@+id/buttonLoad"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/load"
        tools:ignore="ButtonStyle,ExtraText" />
    <Button
        android:id="@+id/buttonClear"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/clear"
        tools:ignore="ButtonStyle" />
    </LinearLayout>

</LinearLayout>